refactoring absolute src

--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -5,7 +5,7 @@
 
     <div class="logo-wrapper">
         <a href="#">
-            <img src="images/locsterLogo_Weiss.png" class="logo" />
+            <img src="/images/locsterLogo_Weiss.png" class="logo" />
         </a>
     </div>
 
@@ -16,7 +16,7 @@
             <input id="searchBar" type="text" name="q" placeholder="Search"/>
             <div class="input-group-btn">
                 <button type="submit">
-                    <img src="icons/glass.png" class="search-icon" />
+                    <img src="/icons/glass.png" class="search-icon" />
                 </button>
             </div>
         </div>
@@ -24,13 +24,13 @@
 
     <div class="icon-wrapper">
         <a href="/chat">
-            <img src="icons/speechbubble.png" class="icon" />
+            <img src="/icons/speechbubble.png" class="icon" />
         </a>
         <a href="/whoisonline">
-            <img src="icons/group.png" class="icon" />
+            <img src="/icons/group.png" class="icon" />
         </a>
         <a href="/friendlist">
-            <img src="icons/people.png" class="icon" />
+            <img src="/icons/people.png" class="icon" />
         </a>
 
         <!-- dropdown -->
@@ -38,20 +38,20 @@
         <div class="dropdown">
             <button class="dropbtn">
                 <a href="#">
-                    <img src="icons/person.png" class="icon" />
+                    <img src="/icons/person.png" class="icon" />
                 </a>
             </button>
             <div class="dropdown-content sb1">
                 <a href="/profilepage">
-                    <img src="icons/person.png" class="icon_dropbtn" />
+                    <img src="/icons/person.png" class="icon_dropbtn" />
                     <p>Profil</p>
                 </a>
                 <a href="/settings">
-                    <img src="icons/gear.png" class="icon_dropbtn" />
+                    <img src="/icons/gear.png" class="icon_dropbtn" />
                     <p>Einstellungen</p>
                 </a>
                 <a href="/logout">
-                    <img src="icons/logout.png" class="icon_dropbtn" />
+                    <img src="/icons/logout.png" class="icon_dropbtn" />
                     <p>Logout</p>
                 </a>
             </div>
