--- a/src/main/resources/templates/profilepage.html
+++ b/src/main/resources/templates/profilepage.html
@@ -19,7 +19,7 @@
     <div class="box profile" id="profileInfoBox">
         <div class="profile-info-wrapper">
             <div class="pic">
-                <img class="profile_pic" src="images/profilePic.png" alt="profile_pic"/>
+                <img class="profile_pic" src="/images/profilePic.png" alt="profile_pic"/>
             </div>
             <div class="info">
                 <h2 class="profile_name" th:text="*{firstName + ' ' + lastName}"></h2>
@@ -30,27 +30,27 @@
                     <div class="ProfileInfosHeader">
                         <div class="row">
                             <div class="birthday group profileinfo">
-                                <img class="profileInfoIcons" src="icons/cake.svg" alt="cake"/>
+                                <img class="profileInfoIcons" src="/icons/cake.svg" alt="cake"/>
                                 <p th:text="*{birthDay}"></p>
                             </div>
                             <div class="gender group profileinfo">
-                                <img class="profileInfoIcons" src="icons/genders-gender-svgrepo-com.svg" alt="icon"/>
+                                <img class="profileInfoIcons" src="/icons/genders-gender-svgrepo-com.svg" alt="icon"/>
                                 <p th:text="#{'labels.sex.'+*{sex}}"></p>
                             </div>
                         </div>
                         <div class="row">
                             <div class="relationship group profileinfo">
-                                <img class="profileInfoIcons" src="icons/heart-thin.svg" alt="heart"/>
+                                <img class="profileInfoIcons" src="/icons/heart-thin.svg" alt="heart"/>
                                 <p th:text="#{'labels.relationshipStatus.'+*{relationshipStatus}}"></p>
                             </div>
                             <div class="job group profileinfo">
-                                <img class="profileInfoIcons" src="icons/job-seeker.svg" alt="job"/>
+                                <img class="profileInfoIcons" src="/icons/job-seeker.svg" alt="job"/>
                                 <p th:text="*{occupation}"></p>
                             </div>
                         </div>
                         <div class="icon-edit-content">
                             <a href="/settings">
-                                <img src="icons/pen.png" alt="pen"/>
+                                <img src="/icons/pen.png" alt="pen"/>
                             </a>
                         </div>
                     </div>
@@ -62,7 +62,7 @@
     <div class="box status" id="status" title="Profiltext bearbeiten">
         <p class="status" th:text="*{profileText}"></p>
         <div class="icon-edit-content" onclick = "displayprofileEdit()">
-            <img src="icons/pen.png" alt="pen"/>
+            <img src="/icons/pen.png" alt="pen"/>
         </div>
     </div>
 
@@ -127,7 +127,7 @@
         </div>
         <div class="icon-edit-content">
             <a href="/settings">
-                <img src="icons/pen.png" alt="pen"/>
+                <img src="/icons/pen.png" alt="pen"/>
             </a>
         </div>
     </div>
@@ -152,12 +152,12 @@
         </div>
         <div class="icon-edit-content">
             <a href="/settings">
-                <img src="icons/pen.png" alt="pen"/>
+                <img src="/icons/pen.png" alt="pen"/>
             </a>
         </div>
     </div>
 </div>
 
-<script type="text/javascript" src="js/profilePage.js"></script>
+<script type="text/javascript" src="/js/profilePage.js"></script>
 </body>
 </html>
