--- a/src/main/resources/templates/whoisonline.html
+++ b/src/main/resources/templates/whoisonline.html
@@ -3,6 +3,7 @@
 <head th:replace="fragments/head"></head>
 
 <head>
+    <link th:href="@{/css/whoisonline.css}" rel="stylesheet" />
     <link th:href="@{/css/friendlist.css}" rel="stylesheet" />
 </head>
 <body>
@@ -29,22 +30,8 @@
                         <span th:text="#{'labels.sex.'+${u.sex}}" class="gender"></span>
                         <span th:text="#{'labels.relationshipStatus.'+${u.relationshipStatus}}" class="relationship"></span>
                         <span th:text="${u.region}" class="region"></span>
-
-                        <span class="icon">
-                <img
-                        class="acceptFriendIcon"
-                        src="icons/accept.svg"
-                        alt="icon"
-                />
-              </span>
-
-                        <span class="icon">
-                <img
-                        class="notAcceptFriendIcon"
-                        src="icons/accept.svg"
-                        alt="icon"
-                />
-              </span>
+                        <span th:text="${u.onlineStatus}" class="onlinestatus"></span>
+                        <div class="onlinestatuscircle"></div>
                     </li>
 
                 </ul>
