--- a/src/main/resources/templates/profilepage.html
+++ b/src/main/resources/templates/profilepage.html
@@ -14,7 +14,7 @@
 <header th:replace="fragments/nav"></header>
 
 <!-- Homepage -->
-<div class="container" th:object="${loggedInUser}">
+<div class="container" th:object="${profileUser}">
 
     <div class="box profile" id="profileInfoBox">
         <div class="profile-info-wrapper">
@@ -48,20 +48,20 @@
                                 <p th:text="*{occupation}"></p>
                             </div>
                         </div>
-                        <div th:if="${myProfile}" class="icon-edit-content">
-                            <a href="/settings">
-                                <img src="/icons/pen.png" alt="pen"/>
-                            </a>
-                        </div>
                     </div>
                 </div>
             </div>
+        </div>
+        <div th:if="${myProfile}" class="icon-edit-content">
+            <a href="/settings">
+                <img src="/icons/pen.png" alt="pen"/>
+            </a>
         </div>
     </div>
 
     <div class="box status" id="status" title="Profiltext bearbeiten">
         <p class="status" th:text="*{profileText}"></p>
-        <div th:if="${myProfile}" class="icon-edit-content" onclick = "displayprofileEdit()">
+        <div th:if="${myProfile}" class="icon-edit-content" onclick="displayprofileEdit()">
             <img src="/icons/pen.png" alt="pen"/>
         </div>
     </div>
@@ -73,7 +73,8 @@
             </div>
             <form action="#" th:action="@{/profilepage}" method="post">
                 <div class="inputs">
-                    <textarea class="profileText" type="text" th:field="*{profileText}" placeholder="Deine Profiltext" autofocus="autofocus"
+                    <textarea class="profileText" type="text" th:field="*{profileText}" placeholder="Deine Profiltext"
+                              autofocus="autofocus"
                               rows="8" cols="75" maxlength="255"></textarea>
                     <span class="highlight"></span>
                     <span class="bar"></span>
@@ -81,12 +82,14 @@
                 </div>
                 <div class="buttons">
                     <div class="submit">
-                        <button type="button" class="submitBtn" onclick="displayprofileInfo()"><i class="fas fa-trash-alt"></i>
+                        <button type="button" class="submitBtn" onclick="displayprofileInfo()"><i
+                                class="fas fa-trash-alt"></i>
                             Abbrechen
                         </button>
                     </div>
                     <div class="submit">
-                        <button type="submit" class="submitBtn" onclick="displayprofileInfo()"><i class="far fa-check-circle"></i>
+                        <button type="submit" class="submitBtn" onclick="displayprofileInfo()"><i
+                                class="far fa-check-circle"></i>
                             Speichern
                         </button>
                     </div>
@@ -117,7 +120,9 @@
                 </div>
                 <div class="message">
                     <p th:text="${entry.content}"></p>
-                    <p th:if="${entry.edited}" th:text="'(bearbeitet am: ' + ${#dates.format(entry.editedAt, 'dd. MMMMMMMMMMMM yyyy')} + ')'" style="font-size: smaller"></p>
+                    <p th:if="${entry.edited}"
+                       th:text="'(bearbeitet am: ' + ${#dates.format(entry.editedAt, 'dd. MMMMMMMMMMMM yyyy')} + ')'"
+                       style="font-size: smaller"></p>
                 </div>
             </div>
         </div>
