--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -29,6 +29,8 @@
                     <span th:text="#{'labels.sex.'+${u.sex}}" class="gender"></span>
                     <span th:text="#{'labels.relationshipStatus.'+${u.relationshipStatus}}" class="relationship"></span>
                     <span th:text="${u.region}" class="region"></span>
+                    <div th:if="${u.isOnline && u.onlineStatus != T(de.teamLocster.enums.OnlineStatus).INVISIBLE}" th:class="'onlinestatus-' + ${u.onlineStatus}"></div>
+                    <div th:if="${!u.isOnline || u.onlineStatus == T(de.teamLocster.enums.OnlineStatus).INVISIBLE}" th:class="onlinestatus-OFFLINE"></div>
 
                     <span class="icon">
                 <img
