--- a/src/main/resources/templates/profilepage.html
+++ b/src/main/resources/templates/profilepage.html
@@ -116,10 +116,10 @@
     <div th:if="${!myProfile}" class="box guestbook">
         <div class="guestbook">
             <h2>neue Beitrag:</h2>
-            <form th:action="@{/guesbookentry/{userId}(userId=*{id})}" th:method="post">
+            <form th:action="@{/guesbookentry/{userId}(userId=*{id})}"  th:method="post">
                 <div class="new post">
                     <div class="message">
-                        <textarea placeholder="was geht up!"
+                        <textarea name="content" placeholder="was geht up!"
                                   autofocus="autofocus"
                                   rows="8" cols="75" maxlength="255" ></textarea>
                     </div>
