--- a/src/main/resources/static/css/profilepage.css
+++ b/src/main/resources/static/css/profilepage.css
@@ -237,3 +237,37 @@
   padding: 5px;
   display: grid;
 }
+
+textarea {
+resize: none;
+width: 600px;
+height: 100px;
+border: none;
+outline: none;
+background-color: cornsilk;
+font-size: 16px;
+}
+
+.FAsenden {
+height: 30px;
+width: 200px;
+border-radius: 50px;
+border-color: #2988ce;
+background-color: #0088ff;
+color: white;
+font-style: bold;
+box-shadow: 1px 1px 4px #000000;
+position: relative;
+left: 250px;
+margin-bottom: 20px;
+}
+
+.submitBtn {
+height: 30px;
+border-radius: 50px;
+border-color: #2988ce;
+background-color: #0088ff;
+color: white;
+font-style: bold;
+box-shadow: 1px 1px 4px #000000;
+}
