--- a/src/main/resources/templates/profilepage.html
+++ b/src/main/resources/templates/profilepage.html
@@ -56,8 +56,8 @@
             <div th:if="${!isFriend}">
                 <form th:action="@{/friendrequest/{userId}(userId=*{id})}" th:method="put">
                         <span class="icon">
-                            <button th:if="${openRequest}" type="submit">Freundschaftsanfrage annehmen</button>
-                            <button th:if="${!openRequest}" type="submit">Freundschaftsanfrage senden</button>
+                            <button th:if="${openRequest}" type="submit" class="FAsenden">Freundschaftsanfrage annehmen</button>
+                            <button th:if="${!openRequest}" type="submit" class="FAsenden">Freundschaftsanfrage senden</button>
                         </span>
                 </form>
             </div>
@@ -86,7 +86,7 @@
             </div>
             <form action="#" th:action="@{/profilepage}" method="post">
                 <div class="inputs">
-                    <textarea class="profileText" type="text" th:field="*{profileText}" placeholder="Deine Profiltext"
+                    <textarea class="profileText" type="text" th:field="*{profileText}" placeholder="Dein Profiltext"
                               autofocus="autofocus"
                               rows="8" cols="75" maxlength="255"></textarea>
                     <span class="highlight"></span>
@@ -115,7 +115,7 @@
 
     <div th:if="${!myProfile}" class="box guestbook">
         <div class="guestbook">
-            <h2>neue Beitrag:</h2>
+            <h2>Schreib einen Beitrag:</h2>
             <form th:action="@{/guesbookentry/{userId}(userId=*{id})}" th:method="post">
                 <div class="new post">
                     <div class="message">
