--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -14,7 +14,7 @@
 
 <div class="container">
     <div class="box">
-        <div class="title">
+        <div class="errorTitle">
             <h2>404 Error</h2>
         </div>
         <div class="alert-danger errorText">
