--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -1,69 +1,174 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-
 <head th:replace="fragments/head"></head>
 
+
 <head>
-    <link rel="stylesheet" href="../static/css/chat.css">
-    <link rel="stylesheet" href="../static/css/index.css">
-    <link th:href = "@{/css/index.css}" rel="stylesheet">
-    <title>Chats</title>
+    <link rel="stylesheet" th:href="@{/css/chat.css}" />
 </head>
 
-<body>
+  <body>
 
-<!-- navbar -->
-<header th:replace="fragments/nav"></header>
+  <!-- navbar -->
+  <header th:replace="fragments/nav"></header>
 
-<!-- Homepage -->
-
-<div class="chat">
-    <div class="closeChat">
-        <button>Chat schliessen</button>
-    </div>
-    <div class="chatUser">
-        <img
-                class="profilePicture"
-                src="images/"
-                alt="profilePicture"
-        />
-        <p class="chatUserName">Herbert Hummer</p>
-        <p class="status">-Wow ein cooler Status!</p>
-        <p class="dateAndTime">Di. 25.08.2021 -19:00</p>
-        <img
-                class="onlineStatusCircle"
-                src="../static/icons/online.svg"
-                alt="onlineStatus"
-        />
-        <p class="onlineStatus">online</p>
-        <img
-                class="blockPerson"
-                src="../static/icons/user_blocked.svg"
-                alt="blockPerson"
-        />
-    </div>
-    <div class="chatWindow">
-        <div class="messageUser1">
-            <p class="message">Howdy Schnitte, darf ich dich belegen?
-                Mein Name ist Herbert und man braucht mich in deiner Gegenwart
-                nicht mehr kochen damit ich rot werde ;)</p>
-            <p class="dateAndTime">Di. 25.08.2021 -19:00</p>
-        </div>
-        <div class="messageUser2">
-            <p class="message">Zum 1000000sten Mal, ich will nichts von dir.
-                Verkriech dich du krustikaner  Kek</p>
-            <p class="dateAndTime">Di. 25.08.2021 -19:00</p>
-        </div>
-        <div>
-            <input class="newMessage" type="text" placeholder="schreibe eine Nachricht"/>
-            <button type="submit">
+    <div class="firstContainer">
+      <div class="wrapper">
+        <div class="chatContainer">
+          <div class="left">
+            <div class="top">
+              <input type="text" placeholder="Search" />
+              <a href="javascript:;" class="search"></a>
+            </div>
+            <ul class="people">
+              <li class="person" data-chat="person1">
                 <img
-                        class="sendMessage"
-                        src="../static/icons/send-message.svg"
-                        alt="send-message"
+                  th:src="@{https://s3-us-west-2.amazonaws.com/s.cdpn.io/382994/thomas.jpg}"
+                  alt=""
                 />
-            </button>
+                <span class="name">Thomas Bangalter</span>
+                <span class="time">2:09 PM</span>
+                <span class="preview">I was wondering...</span>
+              </li>
+              <li class="person" data-chat="person2">
+                <img
+                  src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/382994/dog.png"
+                  alt=""
+                />
+                <span class="name">Dog Woofson</span>
+                <span class="time">1:44 PM</span>
+                <span class="preview">I've forgotten how it felt before</span>
+              </li>
+              <li class="person" data-chat="person3">
+                <img
+                  src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/382994/louis-ck.jpeg"
+                  alt=""
+                />
+                <span class="name">Louis CK</span>
+                <span class="time">2:09 PM</span>
+                <span class="preview"
+                  >But we’re probably gonna need a new carpet.</span
+                >
+              </li>
+              <li class="person" data-chat="person4">
+                <img
+                  src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/382994/bo-jackson.jpg"
+                  alt=""
+                />
+                <span class="name">Bo Jackson</span>
+                <span class="time">2:09 PM</span>
+                <span class="preview">It’s not that bad...</span>
+              </li>
+              <li class="person" data-chat="person5">
+                <img
+                  src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/382994/michael-jordan.jpg"
+                  alt=""
+                />
+                <span class="name">Michael Jordan</span>
+                <span class="time">2:09 PM</span>
+                <span class="preview"
+                  >Wasup for the third time like is you blind bitch</span
+                >
+              </li>
+              <li class="person" data-chat="person6">
+                <img
+                  src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/382994/drake.jpg"
+                  alt=""
+                />
+                <span class="name">Drake</span>
+                <span class="time">2:09 PM</span>
+                <span class="preview">howdoyoudoaspace</span>
+              </li>
+            </ul>
+          </div>
+          <div class="right">
+            <div class="top">
+              <span>To: <span class="name">Dog Woofson</span></span>
+            </div>
+            <div class="chat" data-chat="person1">
+              <div class="conversation-start">
+                <span>Today, 6:48 AM</span>
+              </div>
+              <div class="bubble you">Hello,</div>
+              <div class="bubble you">it's me.</div>
+              <div class="bubble you">I was wondering...</div>
+            </div>
+            <div class="chat" data-chat="person2">
+              <div class="conversation-start">
+                <span>Today, 5:38 PM</span>
+              </div>
+              <div class="bubble you">Hello, can you hear me?</div>
+              <div class="bubble you">I'm in California dreaming</div>
+              <div class="bubble me">... about who we used to be.</div>
+              <div class="bubble me">Are you serious?</div>
+              <div class="bubble you">When we were younger and free...</div>
+              <div class="bubble you">I've forgotten how it felt before</div>
+            </div>
+            <div class="chat" data-chat="person3">
+              <div class="conversation-start">
+                <span>Today, 3:38 AM</span>
+              </div>
+              <div class="bubble you">Hey human!</div>
+              <div class="bubble you">
+                Umm... Someone took a shit in the hallway.
+              </div>
+              <div class="bubble me">... what.</div>
+              <div class="bubble me">Are you serious?</div>
+              <div class="bubble you">I mean...</div>
+              <div class="bubble you">It’s not that bad...</div>
+              <div class="bubble you">
+                But we’re probably gonna need a new carpet.
+              </div>
+            </div>
+            <div class="chat" data-chat="person4">
+              <div class="conversation-start">
+                <span>Yesterday, 4:20 PM</span>
+              </div>
+              <div class="bubble me">Hey human!</div>
+              <div class="bubble me">
+                Umm... Someone took a shit in the hallway.
+              </div>
+              <div class="bubble you">... what.</div>
+              <div class="bubble you">Are you serious?</div>
+              <div class="bubble me">I mean...</div>
+              <div class="bubble me">It’s not that bad...</div>
+            </div>
+            <div class="chat" data-chat="person5">
+              <div class="conversation-start">
+                <span>Today, 6:28 AM</span>
+              </div>
+              <div class="bubble you">Wasup</div>
+              <div class="bubble you">Wasup</div>
+              <div class="bubble you">
+                Wasup for the third time like is <br />you blind bitch
+              </div>
+            </div>
+            <div class="chat" data-chat="person6">
+              <div class="conversation-start">
+                <span>Monday, 1:27 PM</span>
+              </div>
+              <div class="bubble you">So, how's your new phone?</div>
+              <div class="bubble you">You finally have a smartphone :D</div>
+              <div class="bubble me">Drake?</div>
+              <div class="bubble me">Why aren't you answering?</div>
+              <div class="bubble you">howdoyoudoaspace</div>
+            </div>
+            <div class="write">
+              <a href="#" class="write-link attach"></a>
+              <input type="text" />
+              <a href="#" class="write-link smiley"></a>
+              <a href="#" class="write-link send"></a>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
-</div>
+
+  <!-- footer -->
+  <footer th:replace="fragments/footer"></footer>
+
+    <script type="text/javascript" th:src="@{/js/chat.js}"></script>
+
+  </body>
+</html>
