--- a/src/main/resources/templates/profilepage.html
+++ b/src/main/resources/templates/profilepage.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="fragments/head"></head>
-
+<head th:replace="fragments/head"><title></title></head>
 <head>
     <link th:href="@{/css/profilepage.css}" rel="stylesheet">
     <script th:src="@{/js/profilepage.js}"> type = "text/javascript" </script>
+    <title></title>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
     <div class="box profile" id="profileInfoBox">
         <div class="profile-info-wrapper">
             <div class="pic">
-                <img class="profile_pic" th:src="*{profilePicture}" alt="profile_pic"/>
+                <img class="profile_pic" th:src="*{profilePicture}" alt="profile_pic" src="#"/>
             </div>
             <div class="info">
                 <h2 class="profile_name" th:text="*{firstName + ' ' + lastName}"></h2>
@@ -55,10 +55,12 @@
         <div th:if="${!myProfile}">
             <div th:if="${!isFriend}">
                 <form th:action="@{/friendrequest/{userId}(userId=*{id})}" th:method="put">
-                        <span class="icon">
-                            <button th:if="${openRequest}" type="submit" class="FAsenden">Freundschaftsanfrage annehmen</button>
-                            <button th:if="${!openRequest}" type="submit" class="FAsenden">Freundschaftsanfrage senden</button>
-                        </span>
+                            <span class="icon">
+                                <button th:if="${openRequest}" type="submit"
+                                        class="FAsenden">Freundschaftsanfrage annehmen</button>
+                                <button th:if="${!openRequest}" type="submit"
+                                        class="FAsenden">Freundschaftsanfrage senden</button>
+                            </span>
                 </form>
             </div>
             <div th:if="${isFriend}">
@@ -86,9 +88,11 @@
             </div>
             <form action="#" th:action="@{/profilepage}" method="post">
                 <div class="inputs">
-                    <textarea class="profileText" type="text" th:field="*{profileText}" placeholder="Dein Profiltext"
-                              autofocus="autofocus"
-                              rows="8" cols="75" maxlength="255"></textarea>
+                    <label>
+    <textarea class="profileText" type="text" th:field="*{profileText}" placeholder="Dein Profiltext"
+              autofocus="autofocus"
+              rows="8" cols="75" maxlength="255"></textarea>
+                    </label>
                     <span class="highlight"></span>
                     <span class="bar"></span>
                     <span th:errors="*{profileText}" class="alert alert-danger"></span>
@@ -119,9 +123,12 @@
             <form th:action="@{/guesbookentry/{userId}(userId=*{id})}" th:method="post">
                 <div class="new post">
                     <div class="message">
-                        <textarea name="content" placeholder="was geht up!"
-                                  autofocus="autofocus"
-                                  rows="8" cols="75" maxlength="255" ></textarea>
+                        <label>
+                            <textarea name="content" placeholder="was geht up!"
+                                      autofocus="autofocus"
+                                      rows="8" cols="75" maxlength="255">
+                            </textarea>
+                        </label>
                     </div>
                     <div class="submit">
                         <button class="submitBtn"><i class="far fa-check-circle"></i> Senden</button>
@@ -147,11 +154,6 @@
                        style="font-size: smaller"></p>
                 </div>
             </div>
-        </div>
-        <div class="icon-edit-content">
-            <a href="/settings">
-                <img src="/icons/pen.png" alt="pen"/>
-            </a>
         </div>
     </div>
 
